@@ -44,7 +44,30 @@ public interface TransactionHandler
     public void rollback(Handle handle);
 
     /**
+     * Roll back to a named checkpoint
+     * @param handle the handle the rollback is being performed on
+     * @param name the name of the checkpoint to rollback to
+     */
+    public void rollback(Handle handle, String name);
+
+    /**
      * Called to test if a handle is in a transaction
      */
     public boolean isInTransaction(Handle handle);
+
+    /**
+     * Create a new checkpoint (savepoint in JDBC terminology)
+     *
+     * @param handle the handle on which the transaction is being checkpointed
+     * @param name The name of the chckpoint, used to rollback to or release late
+     */
+    void checkpoint(Handle handle, String name);
+
+    /**
+     * Release a previously created checkpoint
+     *
+     * @param handle the handle on which the checkpoint is being released
+     * @param checkpointName the checkpoint to release
+     */
+    void release(Handle handle, String checkpointName);
 }
